stylesheets/style.css
body {
    background: #DC143C;
    font-family: 'Cardo', serif;
}

.head-logo {
    max-height: 20px;
}

.subtext {
    font-size: 1.1rem;
    max-width: 50%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 50px;
    color: #f8f8f8;
    text-align: center;
}

.avatar {
    max-width: 150px;
    border-radius: 150px;
    margin-left: auto;
    margin-right: auto;
    border: 4px solid #12c5a1;
}

.main-title {
    color: white;
    text-align: center;
    margin-top: 35px;
    margin-bottom: 35px;
    font-family: 'Oswald', sans-serif;
    font-weight: 700;
}

.highlight {
    color: white;
    text-align: center;
    margin-top: 75px;
}

.list-group {
    margin-left: auto;
    margin-right: auto;
    max-width: 650px;
}

.list-group-item {
    text-align: center;
    background: #14dcb4;
    padding: 20px;
    border-radius: 10px !important;
    margin-top: 5px;
    margin-bottom: 5px;
    font-weight: 400;
}

.spookthemes {
    background: #000252 !important;
    color: white;
}

.spookthemes:hover {
    background: #000373 !important;
    color: white;
    text-decoration: none;
}

.github {
    background: black !important;
    color: white;
}

.github:hover {
    background: #121212 !important;
    color: white;
    text-decoration: none;
}

.kofi {
    background: #ff5f5f !important;
}

.kofi:hover {
    background: #ff4646 !important;
    text-decoration: none;
}

.twitter {
    background: #1da1f2 !important;
    color: white;
}

.twitter:hover {
    opacity: 0.9 !important;
    text-decoration: none;
}

.linkedin {
    background: #0e76a8 !important;
    color: white;
}

.linkedin:hover {
    opacity: 0.9 !important;
    text-decoration: none;
}

.list-group-item a,
a {
    color: black;
    font-weight: bold;
    text-decoration: none;
}

a:hover {
    color: #232323;
}

.list-group-item:hover {
    background: #12c5a1;
}

@media (min-width: 576px) {
    .avatar {
        margin-top: 0;
    }
 }

@media (min-width: 768px) {
    .avatar {
        margin-top: 50px;
    }
 }

